--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -38,16 +38,23 @@ config:
 
 # END DEVICE TRACKING #########################################################
 
+http:
+  api_password: admin
+
+
+asuswrt:
+  host: 192.168.1.1
+  username: admin  
+  password: hotelquaint712
+  port: 23
 device_tracker:
-   - platform: asuswrt
-     host: 192.168.2.1
-     protocol: ssh
-     username: admin
-     password: hotelquaint712
-     interval_seconds: 10
-     consider_home: 180
-     new_device_defaults:
-       track_new_devices: true
+  - platform: asuswrt
+    interval_seconds: 20
+    consider_home: 180
+    new_device_defaults:
+      track_new_devices: true
+
+     
 
 media_player:
   - platform: soundtouch
