--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -47,6 +47,30 @@ http:
 
 system_health:
 
+hello_state:
+
+
+# Google Maps component API
+sensor:
+
+    # Use Google Map component
+  - platform: google_travel_time
+    
+    # Name of the sensor
+    name: Travel Time
+    
+    # TODO: generate API key
+    api_key: AIzaSyAyDDKXONfTxf1Cj4I-oB1b3bE4ZIictgE
+    
+    # Substitute with our tracker. Example: device_tracker.mobile_phone
+    origin: Austin, Texas 
+    
+    # Substitute with our home. Example: zone.home
+    destination: San Marcos, Texas
+    
+    # 'metric' for Metric, 'imperial' for Imperial
+    options:
+      units: imperial    
 
 #May be correct usage, cannot test as of yet.
 person:
@@ -54,7 +78,7 @@ person:
     id: 0e451b3ad26042a49fa7150252e930da
     device_trackers:
       - device_tracker.Bolians
-
+      
 
 asuswrt:
   host: 192.168.1.1
