--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -7,6 +7,11 @@ config:
 
 python_script:
 
+notify:
+  - name: test_notifier
+    platform: file
+    filename: notifications
+
 http:
   api_password: admin
 
